# covidcyl

./: Dockerfile  app.py  coronavirus.csv  docker-compose.yml  pyproject.toml  requirements.txt
