[tool.poetry]
name = "covidcyl"
version = "1.0.0"
description = ""
authors = ["Adrian Arroyo Calle <adrian.arroyocalle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
streamlit = "^0.57.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
